--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -13,7 +13,7 @@ runs:
   steps:
     - name: install shaderc
       shell: pwsh
-      if: input.shaderc && inputs.os == 'windows-latest'
+      if: inputs.shaderc && inputs.os == 'windows-latest'
       run: |
         Invoke-WebRequest -URI https://storage.googleapis.com/shaderc/artifacts/prod/graphics_shader_compiler/shaderc/windows/continuous_release_2019/10/20230531-104731/install.zip -OutFile shaderc.zip
         Expand-Archive -Path shaderc.zip -DestinationPath shaderc
@@ -21,7 +21,7 @@ runs:
         rm shaderc.zip
     - name: install shaderc
       shell: bash
-      if: input.shaderc && inputs.os == 'ubuntu-latest'
+      if: inputs.shaderc && inputs.os == 'ubuntu-latest'
       run: |
         curl -L https://storage.googleapis.com/shaderc/artifacts/prod/graphics_shader_compiler/shaderc/linux/continuous_clang_release/418/20230531-104531/install.tgz > shaderc.tgz
         tar -xzf shaderc.tgz
@@ -30,7 +30,7 @@ runs:
         rm shaderc.tgz
     - name: install shaderc
       shell: bash
-      if: input.shaderc && inputs.os == 'macos-latest'
+      if: inputs.shaderc && inputs.os == 'macos-latest'
       run: |
         curl -L https://storage.googleapis.com/shaderc/artifacts/prod/graphics_shader_compiler/shaderc/macos/continuous_clang_release/426/20230531-104534/install.tgz > shaderc.tgz
         tar -xzf shaderc.tgz
