--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -13,6 +13,7 @@ runs:
   steps:  
     - name: Setup Python
       uses: actions/setup-python@v4
+      if: inputs.os == 'windows-latest'
       with:
         python-version: "3.12"
 
