--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -8,6 +8,10 @@ inputs:
     description: 'use shaderc'
     required: false
     default: false
+  toolchain:
+    description: 'rust toolchain'
+    required: false
+    default: 'stable'
 runs:
   using: "composite"
   steps:  
@@ -16,6 +20,11 @@ runs:
       if: inputs.os == 'windows-latest'
       with:
         python-version: "3.12"
+
+    - name: Setup Rust
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+      with:
+        toolchain: ${{ inputs.toolchain }}
 
     - name: install shaderc
       shell: pwsh
