--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autd3-link-visualizer"
-version = "20.0.1"
+version = "20.0.3"
 authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
 edition = "2021"
 
@@ -11,11 +11,11 @@ readme = "README.md"
 keywords = ["autd"]
 
 [dependencies]
-autd3-firmware-emulator = "20.0.0"
-autd3-driver = { version = "20.0.0", features = ["sync"] }
-autd3-derive = { version = "20.0.0" }
+autd3-firmware-emulator = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
+autd3-driver = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git", features = ["sync"] }
+autd3-derive = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
 thiserror = "1.0.30"
-pyo3 = { version = "0.20.0", features = ["abi3", "abi3-py310", "auto-initialize"], optional = true }
+pyo3 = { version = "0.20.0", features = ["abi3", "auto-initialize"], optional = true }
 which = { version = "5.0.0", optional = true }
 itertools = "0.12.0"
 vulkano = { version = "0.34.1", optional = true }
@@ -27,7 +27,8 @@ num-complex = "0.4.3"
 
 [dev-dependencies]
 anyhow = "1.0.75"
-autd3 = "20.0.0"
+autd3 = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
+autd3-gain-holo = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
