--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autd3-link-visualizer"
-version = "20.0.4"
+version = "21.0.0-alpha.0"
 authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
 edition = "2021"
 
@@ -11,9 +11,8 @@ readme = "README.md"
 keywords = ["autd"]
 
 [dependencies]
-autd3-firmware-emulator = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
-autd3-driver = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git", features = ["sync"] }
-autd3-derive = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
+autd3-firmware-emulator = { version = "21.0.0-alpha.0" }
+autd3-driver = { version = "21.0.0-alpha.0", default-features = false }
 thiserror = "1.0.30"
 pyo3 = { version = "0.20.0", features = ["abi3", "auto-initialize"], optional = true }
 which = { version = "5.0.0", optional = true }
@@ -27,14 +26,16 @@ num-complex = "0.4.3"
 
 [dev-dependencies]
 anyhow = "1.0.75"
-autd3 = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
-autd3-gain-holo = { version = "20.0.3", git = "https://github.com/shinolab/autd3-rs.git" }
+autd3 = { version = "21.0.0-alpha.0" }
+autd3-gain-holo = { version = "21.0.0-alpha.0" }
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
-default = ["plotters"]
+default = ["plotters", "rpitit"]
 plotters = ["dep:plotters", "plotters-bitmap", "scarlet"]
 python = ["pyo3", "which"]
 gpu = ["vulkano", "vulkano-shaders"]
 single_float = ["autd3-driver/single_float"]
 all = ["plotters", "python", "gpu"]
+rpitit = ["autd3-driver/rpitit"]
+async-trait = ["autd3-driver/async-trait"]
