--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autd3-link-visualizer"
-version = "21.0.0-alpha.0"
+version = "21.0.0"
 authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
 edition = "2021"
 
@@ -11,11 +11,11 @@ readme = "README.md"
 keywords = ["autd"]
 
 [dependencies]
-autd3-firmware-emulator = { version = "21.0.0-alpha.0" }
-autd3-driver = { version = "21.0.0-alpha.0", default-features = false }
+autd3-firmware-emulator = { version = "21.0.0" }
+autd3-driver = { version = "21.0.0" }
 thiserror = "1.0.30"
 pyo3 = { version = "0.20.0", features = ["abi3", "auto-initialize"], optional = true }
-which = { version = "5.0.0", optional = true }
+which = { version = "6.0.0", optional = true }
 itertools = "0.12.0"
 vulkano = { version = "0.34.1", optional = true }
 vulkano-shaders = { version = "0.34.0", optional = true }
@@ -26,16 +26,15 @@ num-complex = "0.4.3"
 
 [dev-dependencies]
 anyhow = "1.0.75"
-autd3 = { version = "21.0.0-alpha.0" }
-autd3-gain-holo = { version = "21.0.0-alpha.0" }
+autd3 = { version = "21.0.0" }
+autd3-gain-holo = { version = "21.0.0" }
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
-default = ["plotters", "rpitit"]
+default = ["plotters"]
 plotters = ["dep:plotters", "plotters-bitmap", "scarlet"]
 python = ["pyo3", "which"]
 gpu = ["vulkano", "vulkano-shaders"]
 single_float = ["autd3-driver/single_float"]
 all = ["plotters", "python", "gpu"]
-rpitit = ["autd3-driver/rpitit"]
-async-trait = ["autd3-driver/async-trait"]
+async-trait = ["autd3-driver/async-trait", "autd3-firmware-emulator/async-trait"]
