--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,5 +14,4 @@ jobs:
       - uses: actions/checkout@v4
       - name: publish to carate.io
         run: |
-          cargo publish --no-verify --dry-run
-          cargo publish --no-verify --token ${{ secrets.CRATEIO_TOKEN }} || true
+          cargo publish --no-verify --token ${{ secrets.CRATEIO_TOKEN }}
