--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,7 +39,6 @@ jobs:
         with:
           os: ubuntu-latest
           shaderc: false
-          toolchain: nightly
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
@@ -50,7 +49,7 @@ jobs:
 
       - name: Generate code coverage
         run: |
-          cargo +nightly llvm-cov --lib --features "python plotters" --lcov --output-path lcov.info
+          cargo llvm-cov --lib --features "python plotters" --lcov --output-path lcov.info
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
