--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "autd3-link-visualizer"
-version = "26.0.0"
+version = "27.0.0-alpha.0"
 authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
 edition = "2021"
 
@@ -11,8 +11,8 @@ readme = "README.md"
 keywords = ["autd"]
 
 [dependencies]
-autd3-firmware-emulator = { version = "26.0.0" }
-autd3-driver = { version = "26.0.0" }
+autd3-firmware-emulator = { version = "27.0.0-alpha.0" }
+autd3-driver = { version = "27.0.0-alpha.0" }
 thiserror = "1.0.30"
 pyo3 = { version = "0.21.0", features = ["abi3", "auto-initialize"], optional = true }
 which = { version = "6.0.0", optional = true }
@@ -26,8 +26,8 @@ num-complex = "0.4.3"
 
 [dev-dependencies]
 anyhow = "1.0.75"
-autd3 = { version = "26.0.0" }
-autd3-gain-holo = { version = "26.0.0" }
+autd3 = { version = "27.0.0-alpha.0" }
+autd3-gain-holo = { version = "27.0.0-alpha.0" }
 tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
