--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,10 @@ on:
     tags:
     - 'v*'
 
-
 jobs:
   build:
     name: publish-src
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: publish to carate.io
-        run: |
-          cargo publish --no-verify --token ${{ secrets.CRATEIO_TOKEN }}
+      - run: cargo publish --no-verify --token ${{ secrets.CRATEIO_TOKEN }}
